--- a/monstyle.css
+++ b/monstyle.css
@@ -5,7 +5,7 @@ body {
         Times, serif;
   
   color: blue;
-  background-color: #d8da3d }
+  background-color: #E5F95B }
 ul.navbar {
   list-style-type: none;
   padding: 0;
@@ -15,8 +15,8 @@ ul.navbar {
   left: 1em;
   width: 9em }
 h1 {
-  font-family: Helvetica, Geneva, Arial,
-        SunSans-Regular, sans-serif }
+  font-family: Helvetica, Geneva, Arial,SunSans-Regular, sans-serif ;
+    color:#F27230}
 ul.navbar li {
   background: white;
   margin: 0.5em 0;
